# bilibili-content-analyzer

./: .gitignore  LICENSE  README.md  README_EN.md  pyproject.toml  requirements.txt
data/raw/: all_videos_data.csv  团队执行力_data.csv  执行力_data.csv  执行力不足_data.csv  执行力培训_data.csv  执行力差_data.csv  执行力强_data.csv  执行力管理_data.csv  执行思维_data.csv  执行技巧_data.csv  执行文化_data.csv  执行方法_data.csv  执行能力_data.csv  提高执行力_data.csv  落地执行_data.csv  高效执行_data.csv
output/: analysis_report.json
src/bilibili_analyzer/: __init__.py  cli.py  config.py  data_analyzer.py  data_collector.py  font_utils.py  main.py  visualizer.py
